--- a/src/GettingStartedApplication/StatelessBackendService.Interfaces/packages.config
+++ b/src/GettingStartedApplication/StatelessBackendService.Interfaces/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.ServiceFabric" version="6.0.211" targetFramework="net451" />
-  <package id="Microsoft.ServiceFabric.Data" version="2.8.211" targetFramework="net451" />
-  <package id="Microsoft.ServiceFabric.Diagnostics.Internal" version="2.8.211" targetFramework="net451" />
-  <package id="Microsoft.ServiceFabric.FabricTransport.Internal" version="2.8.211" targetFramework="net451" />
-  <package id="Microsoft.ServiceFabric.Services" version="2.8.211" targetFramework="net451" />
-  <package id="Microsoft.ServiceFabric.Services.Remoting" version="2.8.211" targetFramework="net451" />
+  <package id="Microsoft.ServiceFabric" version="7.1.458" targetFramework="net472" />
+  <package id="Microsoft.ServiceFabric.Data" version="4.1.458" targetFramework="net472" />
+  <package id="Microsoft.ServiceFabric.Data.Extensions" version="4.1.458" targetFramework="net472" />
+  <package id="Microsoft.ServiceFabric.Data.Interfaces" version="4.1.458" targetFramework="net472" />
+  <package id="Microsoft.ServiceFabric.Diagnostics.Internal" version="4.1.458" targetFramework="net472" />
+  <package id="Microsoft.ServiceFabric.FabricTransport.Internal" version="4.1.458" targetFramework="net472" />
+  <package id="Microsoft.ServiceFabric.Services" version="4.1.458" targetFramework="net472" />
+  <package id="Microsoft.ServiceFabric.Services.Remoting" version="4.1.458" targetFramework="net472" />
 </packages>
