--- a/src/GettingStartedApplication/WebService/WebService.csproj
+++ b/src/GettingStartedApplication/WebService/WebService.csproj
@@ -1,56 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
-    <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
+    <TargetFramework>net8.0</TargetFramework>
+	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <PreserveCompilationContext>true</PreserveCompilationContext>
+	<IsServiceFabricServiceProject>True</IsServiceFabricServiceProject>
     <AssemblyName>WebService</AssemblyName>
     <OutputType>Exe</OutputType>
     <PackageId>WebService</PackageId>
+    <Platforms>x64</Platforms>
+	<SelfContained>True</SelfContained>
   </PropertyGroup>
-
   <ItemGroup>
-    <None Include="App.config" />
     <None Update="wwwroot\**\*;Views\**\*;Areas\**\Views">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
-    <ProjectReference Include="..\ActorBackendService.Interfaces\ActorBackendService.Interfaces.csproj" />
-    <ProjectReference Include="..\StatelessBackendService.Interfaces\StatelessBackendService.Interfaces.csproj" />
+    <ProjectReference Include="..\ActorBackendService.InterfacesV2\ActorBackendService.Interfaces.csproj" />
+    <ProjectReference Include="..\StatelessBackendService.InterfacesV2\StatelessBackendService.Interfaces.csproj" />
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.8" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.8" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.8" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.8" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.8" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.8" />
-    <PackageReference Include="Microsoft.ServiceFabric" Version="7.1.458" />
-    <PackageReference Include="Microsoft.ServiceFabric.Actors" Version="4.1.458" />
-    <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.HttpSys" Version="4.1.458" />
-    <PackageReference Include="Microsoft.ServiceFabric.Data" Version="4.1.458" />
-    <PackageReference Include="Microsoft.ServiceFabric.Services" Version="4.1.458" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.ServiceFabric" Version="10.1.1951" />
+    <PackageReference Include="Microsoft.ServiceFabric.Actors" Version="7.1.1951" />
+    <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.HttpSys" Version="7.1.1951" />
+    <PackageReference Include="Microsoft.ServiceFabric.Data" Version="7.1.1951" />
+    <PackageReference Include="Microsoft.ServiceFabric.Services" Version="7.1.1951" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
-  <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish">
-  </Target>
-
-  <ItemGroup>
-    <DotNetCliToolReference Include="BundlerMinifier.Core" Version="2.2.301" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="System.Net.Http" />
-  </ItemGroup>
-
+    
+  <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish" />
 </Project>
